# sr_project

./: .gitignore  Dockerfile  README.md  compose.yml  design.md  docker-start.sh  nginx.conf
.github/workflows/: backend.yml  docker-publish.yml  frontend.yml  loadtesting.yml  rust.yml
backend/: Cargo.toml  README.md
backend/src/: client.rs  game.rs  main.rs  storage.rs
backend/src/objects/: direction.rs  infos.rs  infos_change.rs  message_client.rs  message_server.rs  mod.rs  player.rs  vector.rs
design/: classes.md  design.md
doc/: design.md  report.md
frontend/: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/html/: index.html
frontend/src/: Canvas.ts  Client.ts  Deadscreen.ts  ErrorBanner.ts  Game.ts  LoginWindow.ts  MessageTPSSmoother.ts  diapo.ts  index.css  index.html  index.ts  leaderboard.ts  lib.rs  utils.ts
loadtesting/: Cargo.toml  README.md
loadtesting/src/: client.rs  main.rs
objects/: Cargo.toml
objects/src/: lib.rs
objects/src/objects/: direction.rs  infos.rs  message_client.rs  message_server.rs  mod.rs  player.rs  vector.rs
