[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.27.0"
serde = {version="1.0.195", features = ["derive"]}
serde_json = "1.0.112"
ts-rs = "7.1.1"
rand = "0.8.5"
